# lab8_SYAITP

./: CMakeLists.txt  Main.qml  main.cpp  mainimagedownloader.cpp  mainimagedownloader.h
